# tup26-p3

./: .editorconfig  .gitignore  README.md  pyproject.toml  resultado-p1.md  resultados-p1.csv  tup26-p3.sln
.obsidian/: workspace.json
alumnos/: alumnos-p1-sin-presentar.md  alumnos.cs  alumnos.md  program.cs  tp1-mal-subido.md  tp1.csv
apuntes/: 00.010-programa-de-programacion-iii.md  02.020-tipos-basicos.md  02.050-enumeraciones.md  02.060-clases-y-objetos.md  02.070-null-y-tipos-anulables.md  02.070-strings.md  02.090-tipos-compuestos.md  02.100-control-de-flujo-y-manejo-de-excepciones.md  02.110-clases-y-objetos.md  02.110-switch-expression-y-pattern-matching.md  02.115-linq.md  02.140-Linq.md  02.150-interfaces-y-contratos.md  02.170-funciones-delegados-y-eventos.md  02.180-control-de-flujo-y-manejo-de-excepciones.md  02.220-principios-solid-csharp.md  02.260-tutorial-linq-basado-en-video-art-of-engineer.md  03.010-archivos-de-texto-rutas-y-encoding.md  03.020-entrada-y-salida-por-consola-con-system-console.md  04.010-tutorial-crear-cli.md  04.030-Tutorial-evaluador-expresiones-csharp.md  04.035-tutorial-modelar-numero-con-clases.md  04.040-Tutorial-evaluar-expresion.md  04.042-evaluar-expresion.md  04.060-evaluar-expresion.md  04.060-tutorial-evaluar-expresion.md  04.070-solid-en-librerias-dotnet.md  04.070-tutorial-compilar-expresion.md  04.090-motor-planilla.md  04.100-crud-efcore-sqlite-3.md  04.130-tutorial-razor-aspnet.md  14.iterador.cs  apuntes-TUP26-P3.epub  apuntes-programacion-iii.epub  apuntes.sln  crear_apuntes.py  crear_apuntes2.py  (+5 more)
(+177 files in other folders)
