[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aprog-agent"
version = "0.1.0"
description = "Agente de programacion para experimentos/aprog"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.2.0",
]

[project.scripts]
aprog = "experimentos.aprog.ap:main"

[tool.hatch.build.targets.wheel]
packages = ["experimentos"]
